name:                typed-geomlab
version:             0.1.0.0
synopsis:            Introducing a type system to the functional programming language GeomLab.
homepage:            https://github.com/amnn/typed_geomlab
license-file:        LICENSE
author:              Ashok Menon
maintainer:          ashok.menon@cs.ox.ac.uk
build-type:          Simple
cabal-version:       >=1.10

executable typed-geomlab
  main-is:             Main.hs
  build-tools:         alex, happy
  other-modules:       Lexer, GLParser
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -W -Werror
  build-depends:       base >=4.8 && <4.9,
                       array ==0.5.*,
                       hashmap ==1.3.*,
                       recursion-schemes ==4.1.*,
                       mtl ==2.2.*,
                       monad-st ==0.2.*,
                       bytestring ==0.10.*

test-suite spec
  type:             exitcode-stdio-1.0
  build-tools:      alex, happy
  other-modules:    Lexer, GLParser
  default-language: Haskell2010
  hs-source-dirs:   spec, src
  ghc-options:      -Wall -W -Werror
  main-is:          Main.hs
  build-depends:    base >=4.8 && <4.9,
                    array ==0.5.*,
                    hashmap ==1.3.*,
                    recursion-schemes ==4.1.*,
                    mtl ==2.2.*,
                    monad-st ==0.2.*,
                    bytestring ==0.10.*,
                    hspec ==2.2.*,
                    HUnit ==1.3.*
